@@ -316,3 +316,8 @@ Other Changes
   Pylint doesn't check if class is only generic in type stubs only.
 
   Closes #4369 and #6523
+
+* ``is_class_subscriptable_pep585_with_postponed_evaluation_enabled`` has been deprecated.
+  Use ``subscriptable_with_postponed_evaluation_enabled`` instead.
+
+  Ref #6536
